<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Controle Ethernet</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="ip_hint">192.168.0.1</string>
    <string name="port_hint">5050</string>
    <string name="conectar">Conectar</string>
    <string name="desconectar">Desconectar</string>
    <string name="bt_a">A</string>
    <string name="down">{DOWN}</string>
    <string name="up">{UP}</string>
    <string name="enter">{ENTER}</string>
    <string name="esc">{ESC}</string>
    <string name="left">{LEFT}</string>
    <string name="right">{RIGHT}</string>
    <string-array name="keys_code">
        <item >{DOWN}</item>
        <item >{UP}</item>
        <item >{RIGHT}</item>
        <item >{LEFT}</item>
        <item >{F1}</item>
        <item >{F2}</item>
        <item >{F3}</item>
        <item >{F4}</item>
        <item >{F5}</item>
        <item >{F6}</item>
        <item >{F7}</item>
        <item >{F8}</item>
        <item >{F9}</item>
        <item >{F10}</item>
        <item >{F11}</item>
        <item >{F12}</item>
        <item >{BACKSPACE}</item>
        <item >{ENTER}</item>
        <item >A</item>
        <item >B</item>
        <item >C</item>
        <item >D</item>
        <item >E</item>
        <item >F</item>
        <item >G</item>
        <item >H</item>
        <item >I</item>
        <item >J</item>
        <item >K</item>
        <item >L</item>
        <item >M</item>
        <item >N</item>
        <item >O</item>
        <item >P</item>
        <item >Q</item>
        <item >R</item>
        <item >S</item>
        <item >T</item>
        <item >U</item>
        <item >V</item>
        <item >W</item>
        <item >X</item>
        <item >Y</item>
        <item >Z</item>
    </string-array>
    <string-array name="keys_name">
        <item >Down</item>
        <item >Up</item>
        <item >Right</item>
        <item >Left</item>
        <item >F1</item>
        <item >F2</item>
        <item >F3</item>
        <item >F4</item>
        <item >F5</item>
        <item >F6</item>
        <item >F7</item>
        <item >F8</item>
        <item >F9</item>
        <item >F10</item>
        <item >F11</item>
        <item >F12</item>
        <item >Backspace</item>
        <item >Enter</item>
        <item >A</item>
        <item >B</item>
        <item >C</item>
        <item >D</item>
        <item >E</item>
        <item >F</item>
        <item >G</item>
        <item >H</item>
        <item >I</item>
        <item >J</item>
        <item >K</item>
        <item >L</item>
        <item >M</item>
        <item >N</item>
        <item >O</item>
        <item >P</item>
        <item >Q</item>
        <item >R</item>
        <item >S</item>
        <item >T</item>
        <item >U</item>
        <item >V</item>
        <item >W</item>
        <item >X</item>
        <item >Y</item>
        <item >Z</item>
    </string-array>
    <string name="s_escolha_char">Escolha o Caractere</string>
    <string name="s_definir">Definir</string>
    <string name="s_cancelar">Cancelar</string>
    <string name="configurar_botao">Configurar Botão</string>
    <string-array name="mouse_sens_values">
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
    </string-array>
    <string name="s_configuracoes">Configuracoes</string>

</resources>