<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#000000" >
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/ip" android:textColor="#FFFFFF" android:gravity="center"/>
    <EditText android:id="@+id/et_ip"
        android:layout_width="200dp" android:layout_height="wrap_content"
        android:textColor="#FFFFFF" android:hint="@string/ip_hint"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/port" android:textColor="#FFFFFF" android:gravity="center"/>
    <EditText android:id="@+id/et_port" 
        android:layout_width="200dp" android:layout_height="wrap_content"
        android:textColor="#FFFFFF" android:hint="@string/port_hint"/>
    <Button android:id="@+id/bt_conectar" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/conectar"/>
    

</LinearLayout>