<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView
        android:text="@string/s_escolha_char"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/spinner_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/keys_name"/>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/bt_fragment_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_definir"
            android:layout_margin="10dp"
            android:layout_weight="1"/>
        <Button android:id="@+id/bt_frament_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_cancelar"
            android:layout_margin="10dp"
            android:layout_weight="1"/>
    </LinearLayout>
   
</LinearLayout>